Fixed some of the errors in the page when viewing on smaller screens

--- a/assets/CSS/stylesheet.css
+++ b/assets/CSS/stylesheet.css
@@ -88,6 +88,17 @@ nav > ul > li > a:hover {
     transition:500ms ease-in;
 }
 
+nav > #exit-nav {
+    width:25px;
+    height:25px;
+    position:absolute;
+    right:25px;
+    top:20px;
+    display: none;
+    transition:350ms linear;
+    transition-delay: 700ms;
+}
+
 /* stylization for the header and navigation section ends. */
 
 
@@ -283,7 +294,7 @@ main > #projects-container {
     background: var(--flexBackgroundImage);
 }
 
-#projects-container > figure > article {
+#projects-container > figure > a >article {
     width:100%;
     height:100%;
     background-color: var(--transparentPrimaryColor);
@@ -294,21 +305,21 @@ main > #projects-container {
     transition: 500ms linear;
 }
 
-#projects-container > figure > article :first-child {
+#projects-container > figure > a > article :first-child {
     font: var(--projectTitle);
     color:var(--tertiaryColor);
     letter-spacing: .075em;
     text-transform: uppercase;
 }
 
-#projects-container > figure > article :last-child {
+#projects-container > figure > a > article :last-child {
     font: var(--projectType);
     color:var(--tertiaryColor);
     letter-spacing: .075em;
     text-transform: uppercase;
 }
 
-#projects-container > figure:hover > article {
+#projects-container > figure:hover > a > article {
     top:calc(100% - 56px);
     transition: 500ms linear;
 }
@@ -400,17 +411,139 @@ main > #contact-me {
     margin:5px auto;
 }
 
+/* Stylization of the Contact-Me section ends. */
 
 
+/* Stylization of the Footer begins */
+
+main > footer { 
+    width:100%;
+    height:100%;
+    background-color: var(--primaryColor);
+    padding:25px 0px;
+}
+
+footer > ul {
+    display: flex;
+    gap: 15px 10px;
+    justify-content: center;
+}
+
+footer > ul > li {
+    color: var(--quaternaryColor);
+    font: var(--bodyCopyStyle);
+    text-align: center;
+}
+
+footer > ul >  li > a {
+    color: var(--quaternaryColor);
+    text-decoration: none;
+}
+
+footer > hr {
+    border:none;
+    width:100%;
+}
+
+footer > p {
+    color: var(--quaternaryColor);
+    font: var(--bodyCopyStyle);
+    width: 100%;
+    text-align: center;
+}
+
+/* Stylization of the footer ends. */
 
 
+/* Media queries for certain screen sizes begins  */
 
+@media only screen and (max-width: 780px) {
+    header > nav {
+        width:100%;
+        background-color: var(--primaryColor);
+        height:100%;
+    }
+    
+    header > nav > img {
+        width:50px;
+        margin-left:calc(50% - 25px);
+        display: block;
+    }
 
+    header > nav > h1 {
+        display: none;
+    }
 
+    header > nav > ul {
+        display:block;
+        float: none;
+        position:absolute;
+        height:0vh;
+        width:100%;
+        margin-top:100px;
+        overflow: hidden;
+        transition:350ms linear;
+        transition-delay: 350ms;
+    }
 
+    header > nav > ul > li {
+        width: 100%;
+        text-align: center;
+        font-size:18pt;
+        line-height:18pt;
+        height:calc((100vh - 100px) / 4);
+        padding-top: calc(((100vh - 100px) / 8 ) - 9pt);
+        background-color: var(--primaryColor);
+        border-top:3px solid var(--quaternaryColor);
+    }
 
+    header > nav > #logo:focus + h1 + ul {
+        display:block;
+        height:calc(100vh - 100px);
+        transition:350ms linear;
+    }
 
+    header > nav > #logo:focus + h1 + ul + #exit-nav {
+        display: block;
+        margin-left:0px;
+    }
 
-/* font-family: 'Lato', sans-serif; 100 300 400 700 900*/
-/* font-family: 'Open Sans', sans-serif; 300 400 800 */
-/* font-family: 'Open Sans Condensed', sans-serif; 300 700 */
+    main > #hero {
+        height:100vh;
+        padding-top:100px;
+    }
+
+    #hero > [src$=".gif"] {
+        height:80vh;
+    }
+
+    #hero > [src$=".png"] {
+        height:70vh;
+        top:30vh;
+        right:calc(50% - ((70vh * .91) / 2));
+        width:auto;
+    }
+
+    #hero > article {
+        width:100%;
+        height:50px;
+        top:calc(100vh - 50px);
+    }
+
+    #about-me-container {
+        text-align: center;
+    }
+
+    #about-me-container > article > h4 {
+        font-size:26pt;
+    }
+
+    #about-me-container > article > hr {
+        width:45%;
+        margin:15px 27.5%;
+    }
+
+    #about-me-container > article > p {
+        width:100%;
+    }
+}
